--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#lily">Lily</a>
         <a href="#video">Brandon Sanderson</a>
         <a href="#tableau">Tableau</a>
-        <a href="index.html">Resume</a>
+        <a href="about.html">Resume</a>
     </div>
     <br>
     <ol>
