--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
     </ol>
     <br>
-    <div class="lifesucks"><a href="top">Top</a></div>
+    <div class="lifesucks"><a href="#top">Top</a></div>
     <div class="textya" id="video">
         <h3>How do I do it?</h3>
         <p>
@@ -160,7 +160,7 @@
         </div>
     </div>
     <br>
-    <div class="lifesucks"><a href="top">Top</a></div>
+    <div class="lifesucks"><a href="#top">Top</a></div>
     <div class="textya" id="tableau">
         <h3>Some Background</h3>
         <p>
@@ -197,7 +197,7 @@
     <br>
     <br>
     <br>
-    <div class="lifesucks"><a href="top">Top</a></div>
+    <div class="lifesucks"><a href="#top">Top</a></div>
     <br>
     <br>
     <br>
